--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>demo_java</name>
+	<name>Java-all-programs2</name>
 	<comment></comment>
 	<projects>
 	</projects>
